examples/test/testpolicy12787.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy12787
  namespace: namespace259
spec:
  podSelector:
    matchLabels:
      key39: value22
      key9: value21
      key0: value29
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key4: value1
      podSelector:
        matchLabels:
          key37: value0
          key19: value33
